--- a/index.html
+++ b/index.html
@@ -10,5 +10,26 @@
     <header>
         <h1>Dante pokla (Dante's Inferno)</h1>
     </header>
+    <main>
+        <div id="bevezetes">
+            <h2>
+            Bevezetés
+            </h2>
+            <p>
+            Dante Alighieri egy 1265-ben született Firenzei pápaság-párti (guelf) költő. Leghíresebb műve: Az Isteni színjáték. Az "Isteni" jelzőt Bocacciótól kapta.
+A művet 3 részre bontotta: Pokol, Purgatórium, Paradicsom. 1307-től egészen haláláig (1321) írta.
+A műben rengeteg költői eszköz szerepel és a 3-as egység folyamatosan megjelenik.
+            </p>
+            </div>
+        <div id="pokol">
+            <h2>
+                Pokol (Inferno)
+            </h2>
+            <p>
+                9 körből áll és 2 fő részre van felbontva: Felső Pokol, Alsó Pokol
+Tölcsérszerű, minél nagyobb bűnt követett el az ember, annál lejjebb kerül és annál nagyobb büntetést kap a megváltásig (végítélet).
+            </p>
+        </div>
+    </main>
 </body>
 </html>
