"rácsrendzser összeeszkábálásának megkezdése"

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Dante pokla (Dante's Inferno)</h1>
     </header>
     <main>
-        <div id="bevezetes">
+        <div id="bevezetes" class="col-lg-6 col-sm-12">
             <h2>
             Bevezetés
             </h2>
@@ -21,7 +21,7 @@ A művet 3 részre bontotta: Pokol, Purgatórium, Paradicsom. 1307-től egészen
 A műben rengeteg költői eszköz szerepel és a 3-as egység folyamatosan megjelenik.
             </p>
             </div>
-        <div id="pokol">
+        <div id="pokol" class="col-lg-6 col-sm-12">
             <h2>
                 Pokol (Inferno)
             </h2>
