--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Dante pokla (Dante's Inferno)</h1>
     </header>
     <main>
+        <div class="container-fluid">
         <div id="bevezetes" class="col-lg-6 col-sm-12">
             <h2>
             Bevezetés
@@ -29,6 +30,7 @@ A műben rengeteg költői eszköz szerepel és a 3-as egység folyamatosan megj
                 9 körből áll és 2 fő részre van felbontva: Felső Pokol, Alsó Pokol
 Tölcsérszerű, minél nagyobb bűnt követett el az ember, annál lejjebb kerül és annál nagyobb büntetést kap a megváltásig (végítélet).
             </p>
+        </div>
         </div>
     </main>
 </body>
