--- a/index.html
+++ b/index.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Dante pokla</title>
 </head>
+
 <body>
     <header>
         <h1>Dante pokla (Dante's Inferno)</h1>
     </header>
     <main>
         <div class="container-fluid">
-        <div id="bevezetes" class="col-lg-6 col-sm-12">
-            <h2>
-            Bevezetés
-            </h2>
-            <p>
-            Dante Alighieri egy 1265-ben született Firenzei pápaság-párti (guelf) költő. Leghíresebb műve: Az Isteni színjáték. Az "Isteni" jelzőt Bocacciótól kapta.
-A művet 3 részre bontotta: Pokol, Purgatórium, Paradicsom. 1307-től egészen haláláig (1321) írta.
-A műben rengeteg költői eszköz szerepel és a 3-as egység folyamatosan megjelenik.
-            </p>
+            <div class="row">
+                <div id="bevezetes" class="col-lg-6 col-sm-12">
+                    <h2>
+                        Bevezetés
+                    </h2>
+                    <p>
+                        Dante Alighieri egy 1265-ben született Firenzei pápaság-párti (guelf) költő. Leghíresebb műve:
+                        Az
+                        Isteni színjáték. Az "Isteni" jelzőt Bocacciótól kapta.
+                        A művet 3 részre bontotta: Pokol, Purgatórium, Paradicsom. 1307-től egészen haláláig (1321)
+                        írta.
+                        A műben rengeteg költői eszköz szerepel és a 3-as egység folyamatosan megjelenik.
+                    </p>
+                </div>
+                <div id="pokol" class="col-lg-6 col-sm-12">
+                    <h2>
+                        Pokol (Inferno)
+                    </h2>
+                    <p>
+                        9 körből áll és 2 fő részre van felbontva: Felső Pokol, Alsó Pokol
+                        Tölcsérszerű, minél nagyobb bűnt követett el az ember, annál lejjebb kerül és annál nagyobb
+                        büntetést kap a megváltásig (végítélet).
+                    </p>
+                </div>
             </div>
-        <div id="pokol" class="col-lg-6 col-sm-12">
-            <h2>
-                Pokol (Inferno)
-            </h2>
-            <p>
-                9 körből áll és 2 fő részre van felbontva: Felső Pokol, Alsó Pokol
-Tölcsérszerű, minél nagyobb bűnt követett el az ember, annál lejjebb kerül és annál nagyobb büntetést kap a megváltásig (végítélet).
-            </p>
-        </div>
         </div>
     </main>
 </body>
+
 </html>
