"fnorbi a GOAT (jelentés: Greatest Of All Time, magyarul: a legjobb) által összeeszkábált Cascading Style Sheets és Hypertext Markup Language hibák megoldásának implementációja"

--- a/index.html
+++ b/index.html
@@ -17,27 +17,31 @@
         <div class="container-fluid">
             <div class="row">
                 <div id="bevezetes" class="col-lg-6 col-sm-12">
-                    <h2>
-                        Bevezetés
-                    </h2>
-                    <p>
-                        Dante Alighieri egy 1265-ben született Firenzei pápaság-párti (guelf) költő. Leghíresebb műve:
-                        Az
-                        Isteni színjáték. Az "Isteni" jelzőt Bocacciótól kapta.
-                        A művet 3 részre bontotta: Pokol, Purgatórium, Paradicsom. 1307-től egészen haláláig (1321)
-                        írta.
-                        A műben rengeteg költői eszköz szerepel és a 3-as egység folyamatosan megjelenik.
-                    </p>
+                    <section>
+                        <h2>
+                            Bevezetés
+                        </h2>
+                        <p>
+                            Dante Alighieri egy 1265-ben született Firenzei pápaság-párti (guelf) költő. Leghíresebb műve:
+                            Az
+                            Isteni színjáték. Az "Isteni" jelzőt Bocacciótól kapta.
+                            A művet 3 részre bontotta: Pokol, Purgatórium, Paradicsom. 1307-től egészen haláláig (1321)
+                            írta.
+                            A műben rengeteg költői eszköz szerepel és a 3-as egység folyamatosan megjelenik.
+                        </p>
+                    </section>
                 </div>
                 <div id="pokol" class="col-lg-6 col-sm-12">
-                    <h2>
-                        Pokol (Inferno)
-                    </h2>
-                    <p>
-                        9 körből áll és 2 fő részre van felbontva: Felső Pokol, Alsó Pokol
-                        Tölcsérszerű, minél nagyobb bűnt követett el az ember, annál lejjebb kerül és annál nagyobb
-                        büntetést kap a megváltásig (végítélet).
-                    </p>
+                    <section>
+                        <h2>
+                            Pokol (Inferno)
+                        </h2>
+                        <p>
+                            9 körből áll és 2 fő részre van felbontva: Felső Pokol, Alsó Pokol
+                            Tölcsérszerű, minél nagyobb bűnt követett el az ember, annál lejjebb kerül és annál nagyobb
+                            büntetést kap a megváltásig (végítélet).
+                        </p>
+                    </section>
                 </div>
             </div>
         </div>
