--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="tetej">
         <h1>Dante pokla (Dante's Inferno)</h1>
     </header>
     <main>
