Nap vége - Megcsináltuk a táblázatot és a lábléc alapjait :)

--- a/index.html
+++ b/index.html
@@ -93,5 +93,26 @@
             </tr>
         </table>
     </main>
+    <footer id="lablec">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12 col-sm-4">
+                    <a href="https://hu.wikipedia.org/wiki/Dante_Pokla" target="_blank">Wikipédia</a>
+                </div>
+                <div class="col-xs-12 col-sm-4">
+                    <a href="#tetej">Vissza az oldal tetejére</a>
+                </div>
+                <div class="col-xs-12 col-sm-4">
+                    <a href="https://mek.oszk.hu/00300/00362/html/isteni1.htm#1" target="_blank">Babits Mihály fordítása</a>
+                </div>
+            </div>
+        </div>
+        <div id="copyright">
+
+        </div>
+        <div id="oldalteteje">
+
+        </div>
+    </footer>
 </body>
 </html>
