--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
                             Dante Alighieri egy 1265-ben született Firenzei pápaság-párti (guelf) költő. Leghíresebb műve:
                             Az
                             Isteni színjáték. Az "Isteni" jelzőt Bocacciótól kapta.
-                            A művet 3 részre bontotta: Pokol, Purgatórium, Paradicsom. 1307-től egészen haláláig (1321)
-                            írta.
+                            A művet 3 részre bontotta: 
+                            <ol>
+                            <li>Pokol</li>
+                            <li>Purgatórium</li>
+                            <li>Paradicsom.</li>
+                            </ol>
+                            1307-től egészen haláláig (1321) írta.
                             A műben rengeteg költői eszköz szerepel és a 3-as egység folyamatosan megjelenik.
                         </p>
                     </section>
@@ -37,9 +42,9 @@
                             Pokol (Inferno)
                         </h2>
                         <p>
-                            9 körből áll és 2 fő részre van felbontva: Felső Pokol, Alsó Pokol
-                            Tölcsérszerű, minél nagyobb bűnt követett el az ember, annál lejjebb kerül és annál nagyobb
-                            büntetést kap a megváltásig (végítélet).
+                            9 körből áll és 2 fő részre van felbontva: Felső Pokol, Alsó Pokol.
+                            Felépítése tölcsérszerű, minél nagyobb bűnt követett el az ember, annál lejjebb kerül és annál nagyobb
+                            büntetést kap a megváltásig (végítélet). Az embereket Minos osztja be a körökbe.
                         </p>
                     </section>
                 </div>
