alsó körök implementálva, és az lenne a kérdésem dante úrnak hogy miért van ennyi bugyor

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </div>
-        <table>
+        <table class="table">
             <tr>
                 <th colspan="4">Felső pokol:</th>
             </tr>
@@ -96,6 +96,112 @@
                 <td>Aggresszívak, erőszakosak</td>
                 <td>Emberi láp</td>
                 <td>-</td>
+            </tr>
+        </table>
+        <table class="table">
+            <tr>
+                <th colspan="5">Alsó Pokol</th>
+            </tr>
+            <tr>
+                <th>Kör</th>
+                <th>Alkör</th>
+                <th>Elítéltek</th>
+                <th>Büntetés</th>
+                <th>Nevezetes személyek</th>
+            </tr>
+            <tr>
+                <td>6. Kör</td>
+                <td>-</td>
+                <td>Eretnekek</td>
+                <td>Élve eltemetve</td>
+                <td>-</td>
+            </tr>
+            <tr >
+                <td rowspan="3">7. Kör</td>
+                <td>I. Szennyrovat</td>
+                <td>Gyilkosok</td>
+                <td>Forró vérpatak</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>II. Szennyrovat</td>
+                <td>Öngyilkosok</td>
+                <td>Emberi erdő, Hárpiák</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>III. Szennyrovat</td>
+                <td>Homoszexuálisok</td>
+                <td>Tűzeső a sivatagban</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td rowspan="10">8. Kör "Hamisak"</td>
+                <td>I. Bugyor</td>
+                <td>Kerítők és csábítók</td>
+                <td>Démonok ostorozzák, míg pucéran járkálnak</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>II. Bugyor</td>
+                <td>Hízelgők</td>
+                <td>Emberi ürülékben fulladoznak</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>III. Bugyor</td>
+                <td>Szentségárulók</td>
+                <td>Kőlyukakban tűz égeti őket</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>IV. Bugyor</td>
+                <td>Jósok és wannabe varázslók</td>
+                <td>Arccal hátrafele menetelnek</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>V. Bugyor</td>
+                <td>Csalók, korrupt tisztviselők</td>
+                <td>Üstben főnek, míg a szurkálják vasvillákkal</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>VI. Bugyor</td>
+                <td>Képmutatók</td>
+                <td>Ólomruhában sétálnak</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>VII. Bugyor</td>
+                <td>Tolvajok</td>
+                <td>Mérges kígyók marják a testüket, mely mindig újjáéled</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>VIII. Bugyor</td>
+                <td>Álnok tervek kiagyalói</td>
+                <td>Lángnyelvekben élnek</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>IX. Bugyor</td>
+                <td>Szakadárok (Viszályt szítók s a hitszakadások okozói)</td>
+                <td>Fel van nyitva a testük, kilógnak a szerveik</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>X. Bugyor</td>
+                <td>Hamisítók</td>
+                <td>Örök szomj és őrület</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>9. Kör</td>
+                <td>-</td>
+                <td>Árulók</td>
+                <td>Jégbe fagyva</td>
+                <td>Júdás, Brutus, Cassius, Lucifer</td>
             </tr>
         </table>
     </main>
