--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                 </div>
             </div>
         </div>
-        <table class="table">
+        <div id="tablazat">
+        <table class=" table table-dark">
             <tr>
                 <th colspan="4">Felső pokol:</th>
             </tr>
@@ -98,7 +99,7 @@
                 <td>-</td>
             </tr>
         </table>
-        <table class="table">
+        <table class="table table-dark">
             <tr>
                 <th colspan="5">Alsó Pokol</th>
             </tr>
@@ -204,6 +205,7 @@
                 <td>Júdás, Brutus, Cassius, Lucifer</td>
             </tr>
         </table>
+        </div>
     </main>
     <footer id="lablec">
         <div class="container-fluid">
