--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                 </div>
             </div>
         </div>
+        <div class="quote">
+            <p>"Ki itt belépsz, hagyj fel minden reménnyel!"</p>
+        </div>
         <table class="table">
             <tr>
                 <th colspan="4">Felső pokol:</th>
@@ -204,6 +207,9 @@
                 <td>Júdás, Brutus, Cassius, Lucifer</td>
             </tr>
         </table>
+        <div class="quote">
+            <p>"Kibujtunk s ott voltak a csillagok!"</p>
+        </div>
     </main>
     <footer id="lablec">
         <div class="container-fluid">
