--- a/index.html
+++ b/index.html
@@ -51,10 +51,8 @@
                 </div>
             </div>
         </div>
-        <div class="quote">
-            <p>"Ki itt belépsz, hagyj fel minden reménnyel!"</p>
-        </div>
-        <table class="table table-dark">
+        <div id="tablazat">
+        <table class=" table table-dark">
             <tr>
                 <th colspan="4">Felső pokol:</th>
             </tr>
@@ -207,8 +205,6 @@
                 <td>Júdás, Brutus, Cassius, Lucifer</td>
             </tr>
         </table>
-        <div class="quote">
-            <p>"Kibujtunk s ott voltak a csillagok!"</p>
         </div>
     </main>
     <footer id="lablec">
