--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div id="tablazat">
-        <table class=" table table-dark">
+        <table class=" table table-dark table-bordered">
             <tr>
                 <th colspan="4">Felső pokol:</th>
             </tr>
@@ -99,7 +99,7 @@
                 <td>-</td>
             </tr>
         </table>
-        <table class="table table-dark">
+        <table class="table table-dark table-bordered">
             <tr>
                 <th colspan="5">Alsó Pokol</th>
             </tr>
