--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                 </div>
             </div>
         </div>
+        <div class="quote">
+            <p>"Ki itt belépsz hagyj fel minden reménnyel!"</p>
+        </div>
         <div id="tablazat">
         <table class=" table table-dark table-bordered">
             <tr>
@@ -205,6 +208,9 @@
                 <td>Júdás, Brutus, Cassius, Lucifer</td>
             </tr>
         </table>
+        </div>
+        <div class="quote">
+            <p>"Kibujtunk s ott voltak a csillagok!"</p>
         </div>
     </main>
     <footer id="lablec">
