--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="quote">
             <p>"Ki itt belépsz hagyj fel minden reménnyel!"</p>
         </div>
-        <div id="tablazat">
+        <div id="tablazat" style="overflow-x: auto ;">
         <table class=" table table-dark table-bordered">
             <tr>
                 <th colspan="4">Felső pokol:</th>
