Cuando veo a un negro salgo corriendo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <header id="tetej">
         <h1>Dante pokla (Dante's Inferno)</h1>
     </header>
+    <div id="copyright">
+        <p>© Chlorine Floaters</p>
+    </div>
     <main>
         <div class="container-fluid">
             <div class="row">
