--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Dante pokla (Dante's Inferno)</h1>
     </header>
     <div id="copyright">
-        <p>© Chlorine Floaters</p>
+        <p>©Chlorine Floaters</p>
     </div>
     <main>
         <div class="container-fluid">
@@ -55,8 +55,11 @@
             </div>
         </div>
         <div class="quote">
+            <img src="./imageaha.png" alt="A pokol kapuja" id="kep" class="img-fluid">
             <p>"Ki itt belépsz hagyj fel minden reménnyel!"</p>
         </div>
+        
+        <div id="tablazat" style="overflow-x: auto;">
         <table class=" table table-dark table-bordered">
             <tr>
                 <th colspan="4">Felső pokol:</th>
@@ -187,6 +190,7 @@
                 <td>Jégbe fagyva</td>
             </tr>
         </table>
+        </div>
         <div class="quote">
             <p>"Kibujtunk s ott voltak a csillagok!"</p>
         </div>
