"végső validator szerinti hibák javítása, kód formázása"

--- a/index.html
+++ b/index.html
@@ -26,15 +26,18 @@
                             Bevezetés
                         </h2>
                         <p>
-                            Dante Alighieri egy 1265-ben született Firenzei pápaság-párti (guelf) költő. Leghíresebb műve:
+                            Dante Alighieri egy 1265-ben született Firenzei pápaság-párti (guelf) költő. Leghíresebb
+                            műve:
                             Az
                             Isteni színjáték. Az "Isteni" jelzőt Bocacciótól kapta.
-                            A művet 3 részre bontotta: 
-                            <ol>
+                            A művet 3 részre bontotta:
+                        </p>
+                        <ol>
                             <li>Pokol</li>
                             <li>Purgatórium</li>
                             <li>Paradicsom.</li>
-                            </ol>
+                        </ol>
+                        <p>
                             1307-től egészen haláláig (1321) írta.
                             A műben rengeteg költői eszköz szerepel és a 3-as egység folyamatosan megjelenik.
                         </p>
@@ -47,7 +50,8 @@
                         </h2>
                         <p>
                             9 körből áll és 2 fő részre van felbontva: Felső Pokol, Alsó Pokol.
-                            Felépítése tölcsérszerű, minél nagyobb bűnt követett el az ember, annál lejjebb kerül és annál nagyobb
+                            Felépítése tölcsérszerű, minél nagyobb bűnt követett el az ember, annál lejjebb kerül és
+                            annál nagyobb
                             büntetést kap a megváltásig (végítélet). Az embereket Minos osztja be a körökbe.
                         </p>
                     </section>
@@ -58,138 +62,138 @@
             <img src="./imageaha.png" alt="A pokol kapuja" id="kep" class="img-fluid">
             <p>"Ki itt belépsz hagyj fel minden reménnyel!"</p>
         </div>
-        
+
         <div id="tablazat" style="overflow-x: auto;">
-        <table class=" table table-dark table-bordered">
-            <tr>
-                <th colspan="4">Felső pokol:</th>
-            </tr>
-            <tr>
-                <th>Kör</th>
-                <th>Elítéltek</th>
-                <th>Büntetés</th>
-            </tr>
-            <tr>
-                <td>0. Kör: Tornác (Előtér)</td>
-                <td>Fellázadt angyalok</td>
-                <td>Zászló utáni végtelen futás</td>
-            </tr>
-            <tr>
-                <td>1. Kör</td>
-                <td>Keresztség nélkül meghaltak</td>
-                <td>Végtelen élet kereszténység nélkül</td>
-            </tr>
-            <tr>
-                <td>2. Kör</td>
-                <td>Szerelemben mértéktelenek</td>
-                <td>Szélvihar</td>
-            </tr>
-            <tr>
-                <td>3. Kör</td>
-                <td>Mértéktelen fogyasztók</td>
-                <td>Jégeső, Cerberus</td>
-            </tr>
-            <tr>
-                <td>4. Kör</td>
-                <td>Pénzimádók, pénzszórók</td>
-                <td>2 nagy emberi hullám, amely folyton összecsap</td>
-            </tr>
-            <tr>
-                <td>5. Kör</td>
-                <td>Aggresszívak, erőszakosak</td>
-                <td>Emberi láp</td>
-            </tr>
-        </table>
-        <table class="table table-dark table-bordered">
-            <tr>
-                <th colspan="5">Alsó Pokol</th>
-            </tr>
-            <tr>
-                <th>Kör</th>
-                <th>Alkör</th>
-                <th>Elítéltek</th>
-                <th>Büntetés</th>
-            </tr>
-            <tr>
-                <td>6. Kör</td>
-                <td>-</td>
-                <td>Eretnekek</td>
-                <td>Élve eltemetve</td>
-            </tr>
-            <tr >
-                <td rowspan="3">7. Kör</td>
-                <td>I. Szennyrovat</td>
-                <td>Gyilkosok</td>
-                <td>Forró vérpatak</td>
-            </tr>
-            <tr>
-                <td>II. Szennyrovat</td>
-                <td>Öngyilkosok</td>
-                <td>Emberi erdő, Hárpiák</td>
-            </tr>
-            <tr>
-                <td>III. Szennyrovat</td>
-                <td>Homoszexuálisok</td>
-                <td>Tűzeső a sivatagban</td>
-            </tr>
-            <tr>
-                <td rowspan="10">8. Kör "Hamisak"</td>
-                <td>I. Bugyor</td>
-                <td>Kerítők és csábítók</td>
-                <td>Démonok ostorozzák, míg pucéran járkálnak</td>
-            </tr>
-            <tr>
-                <td>II. Bugyor</td>
-                <td>Hízelgők</td>
-                <td>Emberi ürülékben fulladoznak</td>
-            </tr>
-            <tr>
-                <td>III. Bugyor</td>
-                <td>Szentségárulók</td>
-                <td>Kőlyukakban tűz égeti őket</td>
-            </tr>
-            <tr>
-                <td>IV. Bugyor</td>
-                <td>Jósok és wannabe varázslók</td>
-                <td>Arccal hátrafele menetelnek</td>
-            </tr>
-            <tr>
-                <td>V. Bugyor</td>
-                <td>Csalók, korrupt tisztviselők</td>
-                <td>Üstben főnek, míg a szurkálják vasvillákkal</td>
-            </tr>
-            <tr>
-                <td>VI. Bugyor</td>
-                <td>Képmutatók</td>
-                <td>Ólomruhában sétálnak</td>
-            </tr>
-            <tr>
-                <td>VII. Bugyor</td>
-                <td>Tolvajok</td>
-                <td>Mérges kígyók marják a testüket, mely mindig újjáéled</td>
-            </tr>
-            <tr>
-                <td>VIII. Bugyor</td>
-                <td>Álnok tervek kiagyalói</td>
-                <td>Lángnyelvekben élnek</td>
-            </tr>
-            <tr>
-                <td>IX. Bugyor</td>
-                <td>Szakadárok (Viszályt szítók s a hitszakadások okozói)</td>
-                <td>Fel van nyitva a testük, kilógnak a szerveik</td>
-            </tr>
-            <tr>
-                <td>X. Bugyor</td>
-                <td>Hamisítók</td>
-                <td>Örök szomj és őrület</td>
-            </tr>
-            <tr>
-                <td>9. Kör</td>
-                <td>-</td>
-                <td>Árulók</td>
-                <td>Jégbe fagyva</td>
-            </tr>
-        </table>
+            <table class=" table table-dark table-bordered">
+                <tr>
+                    <th colspan="3">Felső pokol:</th>
+                </tr>
+                <tr>
+                    <th>Kör</th>
+                    <th>Elítéltek</th>
+                    <th>Büntetés</th>
+                </tr>
+                <tr>
+                    <td>0. Kör: Tornác (Előtér)</td>
+                    <td>Fellázadt angyalok</td>
+                    <td>Zászló utáni végtelen futás</td>
+                </tr>
+                <tr>
+                    <td>1. Kör</td>
+                    <td>Keresztség nélkül meghaltak</td>
+                    <td>Végtelen élet kereszténység nélkül</td>
+                </tr>
+                <tr>
+                    <td>2. Kör</td>
+                    <td>Szerelemben mértéktelenek</td>
+                    <td>Szélvihar</td>
+                </tr>
+                <tr>
+                    <td>3. Kör</td>
+                    <td>Mértéktelen fogyasztók</td>
+                    <td>Jégeső, Cerberus</td>
+                </tr>
+                <tr>
+                    <td>4. Kör</td>
+                    <td>Pénzimádók, pénzszórók</td>
+                    <td>2 nagy emberi hullám, amely folyton összecsap</td>
+                </tr>
+                <tr>
+                    <td>5. Kör</td>
+                    <td>Aggresszívak, erőszakosak</td>
+                    <td>Emberi láp</td>
+                </tr>
+            </table>
+            <table class="table table-dark table-bordered">
+                <tr>
+                    <th colspan="4">Alsó Pokol</th>
+                </tr>
+                <tr>
+                    <th>Kör</th>
+                    <th>Alkör</th>
+                    <th>Elítéltek</th>
+                    <th>Büntetés</th>
+                </tr>
+                <tr>
+                    <td>6. Kör</td>
+                    <td>-</td>
+                    <td>Eretnekek</td>
+                    <td>Élve eltemetve</td>
+                </tr>
+                <tr>
+                    <td rowspan="3">7. Kör</td>
+                    <td>I. Szennyrovat</td>
+                    <td>Gyilkosok</td>
+                    <td>Forró vérpatak</td>
+                </tr>
+                <tr>
+                    <td>II. Szennyrovat</td>
+                    <td>Öngyilkosok</td>
+                    <td>Emberi erdő, Hárpiák</td>
+                </tr>
+                <tr>
+                    <td>III. Szennyrovat</td>
+                    <td>Homoszexuálisok</td>
+                    <td>Tűzeső a sivatagban</td>
+                </tr>
+                <tr>
+                    <td rowspan="10">8. Kör "Hamisak"</td>
+                    <td>I. Bugyor</td>
+                    <td>Kerítők és csábítók</td>
+                    <td>Démonok ostorozzák, míg pucéran járkálnak</td>
+                </tr>
+                <tr>
+                    <td>II. Bugyor</td>
+                    <td>Hízelgők</td>
+                    <td>Emberi ürülékben fulladoznak</td>
+                </tr>
+                <tr>
+                    <td>III. Bugyor</td>
+                    <td>Szentségárulók</td>
+                    <td>Kőlyukakban tűz égeti őket</td>
+                </tr>
+                <tr>
+                    <td>IV. Bugyor</td>
+                    <td>Jósok és wannabe varázslók</td>
+                    <td>Arccal hátrafele menetelnek</td>
+                </tr>
+                <tr>
+                    <td>V. Bugyor</td>
+                    <td>Csalók, korrupt tisztviselők</td>
+                    <td>Üstben főnek, míg a szurkálják vasvillákkal</td>
+                </tr>
+                <tr>
+                    <td>VI. Bugyor</td>
+                    <td>Képmutatók</td>
+                    <td>Ólomruhában sétálnak</td>
+                </tr>
+                <tr>
+                    <td>VII. Bugyor</td>
+                    <td>Tolvajok</td>
+                    <td>Mérges kígyók marják a testüket, mely mindig újjáéled</td>
+                </tr>
+                <tr>
+                    <td>VIII. Bugyor</td>
+                    <td>Álnok tervek kiagyalói</td>
+                    <td>Lángnyelvekben élnek</td>
+                </tr>
+                <tr>
+                    <td>IX. Bugyor</td>
+                    <td>Szakadárok (Viszályt szítók s a hitszakadások okozói)</td>
+                    <td>Fel van nyitva a testük, kilógnak a szerveik</td>
+                </tr>
+                <tr>
+                    <td>X. Bugyor</td>
+                    <td>Hamisítók</td>
+                    <td>Örök szomj és őrület</td>
+                </tr>
+                <tr>
+                    <td>9. Kör</td>
+                    <td>-</td>
+                    <td>Árulók</td>
+                    <td>Jégbe fagyva</td>
+                </tr>
+            </table>
         </div>
         <div class="quote">
             <p>"Kibujtunk s ott voltak a csillagok!"</p>
@@ -205,10 +209,12 @@
                     <a href="#tetej">Vissza az oldal tetejére</a>
                 </div>
                 <div class="col-xs-12 col-sm-4">
-                    <a href="https://mek.oszk.hu/00300/00362/html/isteni1.htm#1" target="_blank">Babits Mihály fordítása</a>
+                    <a href="https://mek.oszk.hu/00300/00362/html/isteni1.htm#1" target="_blank">Babits Mihály
+                        fordítása</a>
                 </div>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
